@@ -99,7 +99,7 @@ class TMdContr: public TController
 
 	string getStatus( );
 
-	int period( )	{ return mPer; }
+	double period( ){ return mPer; }
 	string cron( )	{ return mSched; }
 	int prior( )	{ return mPrior; }
 
@@ -121,8 +121,8 @@ class TMdContr: public TController
 
 	//Attributes
 	Res	en_res;		//Resource for enable params
-	int	&mPer,		// ms
-		&mPrior;	// Process task priority
+	double	&mPer;		// ms
+	int	&mPrior;	// Process task priority
 	ResString &mSched;      // Calc schedule
 
 	bool	prc_st,		// Process task active
